example/lib/src/arbs/errors/app_el.arb
{
  "@@locale": "el",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Παρουσιάστηκε σφάλμα",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Παρουσιάστηκε ένα απροσδόκητο σφάλμα",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Η αναφορά σφάλματος στάλθηκε με επιτυχία.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}